fix: fixed hoverbox hiding behind general info

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -27,7 +27,6 @@
   justify-content: center;
   align-items: flex-start;
   aspect-ratio: 1266 / 976;
-  overflow: hidden;
 }
 
 .sidebar {
